syntax = "proto3";
package pb;
option go_package = "internal/pb";

message courseBlank{}

message Course {
    string id = 1;
    string name = 2;
    string description = 3;
}

message CreateCourseRequest {
    string name = 1;
    string description = 2;
    string categoryID = 3;
}

message CourseList {
    repeated Course courses = 1;
}


message ListRequest {
    string name = 1;
  }

message CourseGetRequest {
    string id = 1;
}

service CourseService {
    rpc CreateCourse(CreateCourseRequest) returns (Course) {}
    rpc CreateCourseStream(stream CreateCourseRequest) returns (CourseList) {}
    rpc CreateCourseStreamBidirectional(stream CreateCourseRequest) returns (stream Course) {}
    rpc ListCourses(courseBlank) returns (CourseList) {}
    rpc GetCourse(CourseGetRequest) returns (Course) {}
    rpc ListCoursesStream(courseBlank) returns (stream Course);
}